[gd_scene load_steps=10 format=3 uid="uid://bxeobpm0aemhb"]

[ext_resource type="Script" path="res://assets/scripts/level.gd" id="1_0e5c7"]
[ext_resource type="AudioStream" uid="uid://be2b76s13mne1" path="res://assets/audio/space-asteroids.ogg" id="1_d6syn"]
[ext_resource type="PackedScene" uid="uid://gqm2x3fjtx5t" path="res://scenes/gui.tscn" id="2_8ya62"]
[ext_resource type="PackedScene" uid="uid://lblnhhqe323q" path="res://scenes/enemy.tscn" id="2_53a2l"]
[ext_resource type="Texture2D" uid="uid://coy3fr4bivits" path="res://assets/images/Background/bg-back.png" id="2_b28dr"]
[ext_resource type="Texture2D" uid="uid://cnsspli63hpwn" path="res://assets/images/Background/bg-stars.png" id="3_ac1by"]
[ext_resource type="Texture2D" uid="uid://ckx4m1eakkxxp" path="res://assets/images/Background/bg-planet.png" id="4_jepjl"]
[ext_resource type="PackedScene" uid="uid://ci5w7g36yn67t" path="res://scenes/player.tscn" id="7_5ihau"]

[sub_resource type="Curve2D" id="Curve2D_teorq"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 272, 0, 0, 0, 0, 0, 272, 160, 0, 0, 0, 0, 280, 160, 0, 0, 0, 0, 280, 1, 0, 0, 0, 0, 273, 0, 0, 0, 0, 0, 272, 0)
}
point_count = 6

[node name="Level" type="Node2D" groups=["Level"]]
script = ExtResource("1_0e5c7")
enemy = ExtResource("2_53a2l")

[node name="GUI" parent="." instance=ExtResource("2_8ya62")]

[node name="Settings" type="Node" parent="."]

[node name="MusicBG" type="AudioStreamPlayer" parent="Settings"]
stream = ExtResource("1_d6syn")
autoplay = true

[node name="Timer" type="Timer" parent="Settings"]
wait_time = 0.92
autostart = true

[node name="Background" type="Node" parent="."]

[node name="Back" type="ParallaxBackground" parent="Background"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/Back"]
motion_mirroring = Vector2(272, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/Back/ParallaxLayer"]
texture = ExtResource("2_b28dr")
centered = false

[node name="Starts" type="ParallaxBackground" parent="Background"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/Starts"]
motion_mirroring = Vector2(272, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/Starts/ParallaxLayer"]
texture = ExtResource("3_ac1by")
centered = false

[node name="Planet_1" type="ParallaxBackground" parent="Background"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/Planet_1"]
motion_mirroring = Vector2(816, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/Planet_1/ParallaxLayer"]
texture = ExtResource("4_jepjl")
centered = false

[node name="Planet_2" type="ParallaxBackground" parent="Background"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/Planet_2"]
motion_mirroring = Vector2(816, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/Planet_2/ParallaxLayer"]
texture = ExtResource("4_jepjl")
centered = false
offset = Vector2(272, 0)
flip_v = true

[node name="PathSpawn" type="Path2D" parent="."]
curve = SubResource("Curve2D_teorq")

[node name="PathFollow" type="PathFollow2D" parent="PathSpawn"]
position = Vector2(272, 0)
rotation = 1.5708

[node name="Player" parent="." instance=ExtResource("7_5ihau")]
position = Vector2(34, 86)

[connection signal="timeout" from="Settings/Timer" to="." method="_on_timer_timeout"]
